--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         :
-  orcid            : "https://orcid.org/0000-0002-9476-521X"
+  orcid            : #"https://orcid.org/0000-0002-9476-521X"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
