--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "GUO Xiaoqing"
   avatar           : "xiaoqingguo.png"
-  bio              : "Ph.D. Student"
+  bio              : "Postdoc Fellow"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
