--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Projects"
     url: /projects/ 
 
-  - title: "Publications"
-    url: /publications/       
+#   - title: "Research"
+#     url: /research/       
     
   - title: "Awards"
     url: /awards/
