--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,12 +3,12 @@ main:
   - title: "News"
     url: /news/
 
-  - title: "Projects"
-    url: /projects/ 
-
 #   - title: "Research"
 #     url: /research/       
-    
+
+  - title: "Publications"
+    url: /publications/ 
+
   - title: "Awards"
     url: /awards/
         
