--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=fo3rmtwAAAAJ&hl=en"
-  email            : "xiaoqiguo2-c@my.cityu.edu.hk"
+  email            : "xiaoqing.guo@eng.ox.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Xiaoqing-Guo-4"
   uri              :
   bitbucket        :
