--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/guo_xiaoqing"
+  twitter          : "guo_xiaoqing"
   vine             :
   weibo            :
   xing             :
