--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Xiaoqing Guo"
-  avatar           : "xiaoqingguo.png"
+  avatar           : "IMG_5408.JPG"
   bio              : "Postdoc Fellow"
   location         : "Hong Kong"
   employer         :
