--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Dr. Xiaoqing Guo"
   avatar           : "IMG_5408.JPG"
   bio              : "Postdoc Fellow"
-  location         : "Hong Kong"
+  location         : "United Kingdom"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=fo3rmtwAAAAJ&hl=en"
