--- a/_data/team_stu.yml
+++ b/_data/team_stu.yml
@@ -6,7 +6,7 @@
   education1: M.S. Shanghai Jiao Tong University
   education2: B.S. Shanghai Jiao Tong University
 
-- name: <a href="https://dblp.org/pid/358/1060.html" target="_blank">Boyun Zheng</a>
+- name: <a href="https://scholar.google.com/citations?user=ZveKOXkAAAAJ&hl=zh-CN" target="_blank">Boyun Zheng</a>
   photo:  BoyunZheng.jpg
   info: PhD Student at CUHK (co-advise with Prof. Yixuan Yuan), since Aug 2024
   # email: xxx@eng.ox.ac.uk
