--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Research"
     url: /research/       
 
-  - title: "Team"
-    url: /team/       
+  # - title: "Team"
+  #   url: /team/       
 
   - title: "Publications"
     url: /publications/ 
