--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Dr. Xiaoqing Guo"
   avatar           : "IMG_5408.JPG"
-  bio              : "Postdoc Fellow"
+  bio              : "Assistant Professor" 
   location         : "United Kingdom"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.hk/citations?user=fo3rmtwAAAAJ&hl=en"
-  email            : "xiaoqing.guo@eng.ox.ac.uk"
+  email            : "xiaoqingguo@hkbu.edu.hk"
   researchgate     : "https://www.researchgate.net/profile/Xiaoqing-Guo-4"
   uri              :
   bitbucket        :
