--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
   - title: "Activities"
     url: /activities/
 
-  - title: "Vacancies"
-    url: /vacancies/
+  # - title: "Vacancies"
+  #   url: /vacancies/
 
     
   # - title: "CV"
